/*
	Structure of Storage area of TREZOR

	Author: Marek Palatinus <slush@satoshilabs.com>

	Version: 0.1
*/

// Some sugar for easier handling in Multibit
option java_package = "org.multibit.hd.hardware.trezor.protobuf";
option java_outer_classname = "TrezorStorage";

import "types.proto";

message Storage {
	required uint32 version = 1;
	optional HDNodeType node = 2;
	optional string mnemonic = 3;
	optional bool passphrase_protection = 4;	// whether node_serialized or mnemonic are encrypted (protected by passphrase)
	optional uint32 pin_failed_attempts = 5;
	optional string pin = 6;
	optional string language = 7;
	optional string label = 8;
}
